@@ -7,7 +7,7 @@
 </HEAD>
 <BODY bgcolor="#ffffff">
 
-  <TABLE COLS="1" BORDER="0" CELLSPACING="4" CELLPADDING="5">
+  <TABLE COLS="1" BORDER="0" CELLSPACING="4" CELLPADDING="5" WIDTH="100%">
         <TR>
         <TD COLSPAN="2" WIDTH="100%" BGCOLOR="#99CCFF" ALIGN="CENTER"><BR>
         <H1 ALIGN="CENTER">FSF Europe - Mailing Lists</H1>
@@ -47,7 +47,15 @@ the <EM>FSF Europe</EM> is
 		    <B>Peter Gerwinski</B><BR>
 		    
 		    <B>Werner Koch</B><BR>
-		    
+		
+		<B>Frederic Couchet</B><BR>
+		
+		<B>Jonas &Ouml;berg</B><BR>
+		
+		<B>Loic Dachary</B><BR>
+
+		<B>Alessandro Rubini</B><BR>
+		
 		</TD>
 		<TD ALIGN="LEFT" WIDTH="70%">
 		    &lt;<A HREF="mailto:greve@fsfeurope.org"><EM>greve@fsfeurope.org</EM></A>&gt;<BR>
@@ -57,7 +65,14 @@ the <EM>FSF Europe</EM> is
 		    &lt;<A HREF="mailto:gerwinski@fsfeurope.org"><EM>gerwinski@fsfeurope.org</EM></A>&gt;<BR>
 		    
 		    &lt;<A HREF="mailto:koch@fsfeurope.org"><EM>koch@fsfeurope.org</EM></A>&gt;<BR>
+		
+		&lt;<A HREF="mailto:couchet@fsfeurope.org"><EM>couchet@fsfeurope.org</EM></A>&gt;<BR>
 
+		&lt;<A HREF="mailto:oberg@fsfeurope.org"><EM>oberg@fsfeurope.org</EM></A>&gt;<BR>
+
+		&lt;<A HREF="mailto:dachary@fsfeurope.org"><EM>dachary@fsfeurope.org</EM></A>&gt;<BR>
+
+		&lt;<A HREF="mailto:rubini@fsfeurope.org"><EM>rubini@fsfeurope.org</EM></A>&gt;<BR>
 
 		</TD>
 	      </TABLE>
@@ -211,7 +226,7 @@ permitted in any medium, provided this notice is preserved.</p>
 <P>
 Updated:
 <!-- hhmts start -->
-06 Mar 2001 lhorn
+Last modified: Tue Mar  6 12:05:27 CET 2001
 <!-- hhmts end -->
 </body>
 </html>
