@@ -1,3 +1,7 @@
+2001-03-06  Georg C. F. Greve  <greve@gnu.org>
+
+	* mailman/index.html: added other core team members
+
 2001-03-04 Lutz Horn <lh@lutz-horn.de>
 
 	* Removed DOI from index.html and reworked the entire index page.
